# project-2_suhinin_b25-555

./: .gitignore  Makefile  README.md  db_meta.json  demo.cast  pyproject.toml
src/: __init__.py.
src/primitive_db/: core.py  decorators.py  engine.py  main.py  parser.py  utils.py
