[project]
name = "project-2-suhinin-b25-555"
version = "0.2.0"
description = ""
authors = [
    {name = "folawer21", email = "folawer21@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "project-2-suhinin-b25-555"
version = "0.2.0"
description = ""
authors = ["folawer21 <folawer21@mail.ru>"]
readme = "README.md"
packages = [
    { include = "primitive_db", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13"
prompt = ">=0.4.1,<0.5.0"

[tool.poetry.scripts]
project = "primitive_db.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 